--- a/src/app/shared-module/sidebar/sidebar.component.html
+++ b/src/app/shared-module/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a class="brand-link">
     <img src="assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
     <span class="brand-text font-weight-light"><strong>EVA</strong></span>
   </a>
@@ -14,7 +14,7 @@
         <img src="assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block"><span>Alexander Pierce</span></a>
+        <a [routerLink]="['/profile']" class="d-block"><span>Alexander Pierce</span></a>
       </div>
     </div>
     <!-- Sidebar Menu -->
@@ -23,7 +23,7 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
-          <a href="pages/calendar.html" class="nav-link">
+          <a [routerLink]="['/test']" class="nav-link">
             <i class="nav-icon fas fa-table"></i>
             <p>
               Test
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a (click)="goToRoute()" class="nav-link">
+          <a [routerLink]="['/eactivity']" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Actividad Extracurricular
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="pages/kanban.html" class="nav-link">
+          <a [routerLink]="['/aggrement']" class="nav-link">
             <i class="nav-icon fas fa-handshake"></i>
             <p>
               Convenio
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="pages/kanban.html" class="nav-link">
+          <a [routerLink]="['/student']" class="nav-link">
             <i class="nav-icon fas fa-users"></i>
             <p>
               Estudiantes
