--- a/src/app/shared-module/footer/footer.component.html
+++ b/src/app/shared-module/footer/footer.component.html
@@ -1,6 +1,6 @@
   <!-- Main Footer -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2021 <a>EVA: Exploración Voacional Adaptable</a>.</strong>
+    <strong>Copyright &copy; 2021 <a>EVA: Exploración Vocacional Adaptable</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 1
