--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,1 +1,6 @@
-<p>student works!</p>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<app-content-wrapper></app-content-wrapper>
+<app-control-sidebar></app-control-sidebar>
+<app-footer></app-footer>
+
