--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,5 @@
-<p>test works!</p>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<app-content-wrapper></app-content-wrapper>
+<app-control-sidebar></app-control-sidebar>
+<app-footer></app-footer>
