--- a/src/app/activity/read-activity/read-activity.component.html
+++ b/src/app/activity/read-activity/read-activity.component.html
@@ -1,1 +1,36 @@
-<p>read-activity works!</p>
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0">Actividades Extracurriculares</h1>
+      </div><!-- /.container-fluid -->
+    </div>
+  </div>
+</div>
+<!-- /.content-header -->
+
+<div class="content">
+  <button [routerLink]="['/eactivity/create']" class="btn-agg">AGREGAR<i class="fas fa-plus"></i></button>
+  <div class="activity--grid">
+    <div class="row">
+  <!-- Gallery item -->
+      <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let activity of activities | paginate: { itemsPerPage: 4, currentPage: page }">
+        <div class="bg-white rounded shadow-sm"><img [src]="activity.images" alt="" class="img-fluid card-img-top">
+          <div class="p-4">
+            <h5> <a href="#" class="text-dark">{{activity.title}}</a></h5>
+            <p class="small text-muted mb-0">{{activity.description}}</p>
+            <div class="d-flex align-items-center justify-content-between rounded-pill px-3 py-2 mt-4">
+              <button [routerLink]="['/eactivity/read']" class="button-info"><i class="fas fa-eye"></i></button>
+              <button [routerLink]="['/eactivity/update']" class="button-edit"><i class="fas fa-pen"></i></button>
+              <button (click)="delete()" class="button-delete"><i class="fas fa-trash"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <pagination-controls (pageChange)="page = $event"
+    previousLabel="Anterior"
+    nextLabel="Siguiente">
+  </pagination-controls>
+</div>
