--- a/src/app/shared-module/header/header.component.html
+++ b/src/app/shared-module/header/header.component.html
@@ -45,7 +45,7 @@
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <div class=" image d-flex flex-column justify-content-center align-items-center">
               <hr>
-              <button class="btn btn-secondary">
+              <button class="btn btn-secondary" [routerLink]="['/profile']">
                   <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" />
                 </button>
                 <span class="name mt-3">Eleanor Pena</span>
