--- a/src/app/shared-module/control-sidebar/control-sidebar.component.html
+++ b/src/app/shared-module/control-sidebar/control-sidebar.component.html
@@ -1,5 +1,5 @@
   <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
+  <aside class="control-sidebar control-sidebar-dark" style="display: none;">
     <!-- Control sidebar content goes here -->
   </aside>
   <!-- /.control-sidebar -->
