--- a/src/app/shared-module/footer/footer.component.html
+++ b/src/app/shared-module/footer/footer.component.html
@@ -1,8 +1,7 @@
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <strong>Copyright &copy; 2021 <a>EVA: Exploración Vocacional Adaptable</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 1
-    </div>
-  </footer>
+<footer class="main-footer">
+  <strong>Copyright &copy; 2014-2021 <a>EVA: EXPLORACIÓN VOCACIONAL ADAPTABLE</a>.</strong>
+  All rights reserved.
+  <div class="float-right d-none d-sm-inline-block">
+    <b>Version</b> 3.2.0
+  </div>
+</footer>
