--- a/src/app/shared-module/sidebar/sidebar.component.css
+++ b/src/app/shared-module/sidebar/sidebar.component.css
@@ -1,35 +1,34 @@
-.elevation-4 {
-  box-shadow: 0 14px 28px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.22)!important;
-}
-[class*=sidebar-dark-] {
+.color-blue{
   background-color: #0067a9;
-}
-.main-sidebar {
-  height: 100vh;
-  overflow-y: hidden;
-  z-index: 1038;
-}
-
-.nav-link {
-  display: block;
-  padding: 0.5rem 1rem;
-  color: white;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-  background-color: transparent;
+  color: white
 }
 
 p {
-  color: white;
+  color: white
 }
 
-i {
+i{
   color: white;
+  align-items: center;
+  padding-right: 10px;
+  padding-left: 0;
+}
+
+.a-style{
+  color: #0067a9;
+  text-decoration: none;
+  line-height: 1.5;
+  background-color: white;
+}
+
+.a-style2{
+  color: white;
+  text-decoration: none;
+  line-height: 1.5;
+  background-color: #0067a9;
 }
 
 span{
-  color: white;
+  font-weight:400;
+  font-weight: bold;
 }
