--- a/src/app/shared-module/sidebar/sidebar.component.html
+++ b/src/app/shared-module/sidebar/sidebar.component.html
@@ -1,11 +1,9 @@
-<!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar color-blue elevation-4">
   <!-- Brand Logo -->
-  <a class="brand-link">
+  <a href="index3.html" class="brand-link a-style">
     <img src="assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
     <span class="brand-text font-weight-light"><strong>EVA</strong></span>
   </a>
-
   <!-- Sidebar -->
   <div class="sidebar">
     <!-- Sidebar user panel (optional) -->
@@ -14,62 +12,63 @@
         <img src="assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a [routerLink]="['/profile']" class="d-block"><span>Alexander Pierce</span></a>
+        <a href="#" class="d-block a-style2">Alexander Pierce</a>
       </div>
     </div>
+
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
-        <li class="nav-item">
-          <a [routerLink]="['/test']" class="nav-link">
-            <i class="nav-icon fas fa-table"></i>
-            <p>
-              Test
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/eactivity']" class="nav-link">
-            <i class="nav-icon fas fa-list"></i>
-            <p>
-              Actividad Extracurricular
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/aggrement']" class="nav-link">
-            <i class="nav-icon fas fa-handshake"></i>
-            <p>
-              Convenio
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/student']" class="nav-link">
-            <i class="nav-icon fas fa-users"></i>
-            <p>
-              Estudiantes
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/school']" class="nav-link">
-            <i class="nav-icon fas fa-school"></i>
-            <p>
-              Instituciones Educativas
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/dashboard']" class="nav-link">
-            <i class="nav-icon fas fa-chart-line"></i>
-            <p>
-              Dashboard
-            </p>
-          </a>
-        </li>
+             <li>
+              <a [routerLink]="['/test']" class="nav-link">
+                <i class="nav-icon fas fa-table"></i>
+                <p>
+                  Test
+                </p>
+              </a>
+            </li>
+            <li>
+              <a [routerLink]="['/eactivity']" class="nav-link">
+                <i class="nav-icon fas fa-list"></i>
+                <p>
+                  Actividad Extracurricular
+                </p>
+              </a>
+            </li>
+            <li>
+              <a [routerLink]="['/aggrement']" class="nav-link">
+                <i class="nav-icon fas fa-handshake"></i>
+                <p>
+                  Convenio
+                </p>
+              </a>
+            </li>
+            <li>
+              <a [routerLink]="['/student']" class="nav-link">
+                <i class="nav-icon fas fa-users"></i>
+                <p>
+                  Estudiantes
+                </p>
+              </a>
+            </li>
+            <li>
+              <a [routerLink]="['/school']" class="nav-link">
+                <i class="nav-icon fas fa-school"></i>
+                <p>
+                  Instituciones Educativas
+                </p>
+              </a>
+            </li>
+            <li>
+              <a [routerLink]="['/dashboard']" class="nav-link">
+                <i class="nav-icon fas fa-chart-line"></i>
+                <p>
+                  Dashboard
+                </p>
+              </a>
+            </li>
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
