--- a/src/app/student/read-student/read-student.component.html
+++ b/src/app/student/read-student/read-student.component.html
@@ -1,1 +1,55 @@
-<p>read-student works!</p>
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0">Estudiantes</h1>
+      </div><!-- /.container-fluid -->
+    </div>
+  </div>
+</div>
+
+<button [routerLink]="['/student/create']" class="btn-agg">AGREGAR<i class="fas fa-plus"></i></button>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-10 ml-auto mr-auto">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="text-center">#</th>
+              <th>Nombre</th>
+              <th>Grado</th>
+              <th class="text-right">Curso</th>
+              <th class="text-right">Acciones</th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let activity of activities | paginate: { itemsPerPage: 7, currentPage: page }; let i = index">
+            <tr>
+              <td class="text-center">{{i}}</td>
+              <td>{{activity.title}}</td>
+              <td>{{activity.title}}</td>
+              <td class="text-right">{{activity.title}}</td>
+              <td class="td-actions text-right">
+                <button type="button" [routerLink]="['/student/read']" rel="tooltip" class="btn btn-info btn-just-icon">
+                  <i class="fas fa-eye"></i>
+                </button>
+                <button type="button" [routerLink]="['/student/update']" rel="tooltip" class="btn btn-success btn-just-icon">
+                  <i class="fas fa-pen"></i>
+                </button>
+                <button type="button" (click)="delete()" rel="tooltip" class="btn btn-danger btn-just-icon" >
+                  <i class="fas fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<pagination-controls (pageChange)="page = $event"
+previousLabel="Anterior"
+nextLabel="Siguiente">
+</pagination-controls>
+
