--- a/src/app/profile/read-profile/read-profile.component.html
+++ b/src/app/profile/read-profile/read-profile.component.html
@@ -1,1 +1,36 @@
-<p>read-profile works!</p>
+<div class="content rounded bg-white">
+  <div class="row">
+      <div class="col-md-2 border-right">
+          <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
+      </div>
+      <div class="col-md-5 border-right">
+          <div class="p-3 py-4">
+              <div class="d-flex justify-content-between align-items-center">
+                  <h4 class="text-right">Perfil</h4>
+              </div>
+              <div class="row mt-2">
+                  <div class="col-md-5"><label class="labels">Name</label><p>nombre</p></div>
+                  <div class="col-md-6"><label class="labels">Surname</label><p>12345</p></div>
+              </div>
+              <div class="row mt-3">
+                  <div class="col-md-12"><label class="labels">Mobile Number</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Address Line 1</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Address Line 2</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Postcode</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">State</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Area</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Email ID</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Education</label><p>12345</p></div>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+          <div class="p-3 py-5">
+              <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
+              <div class="col-md-12"><label class="labels">Experience in Designing</label><p>12345</p></div> <br>
+              <div class="col-md-12"><label class="labels">Additional Details</label><p>12345</p></div>
+          </div>
+          <div class="mt-5 text-center"><button [routerLink]="['/profile/update']" class="btn btn-primary profile-button" type="button">Editar Perfil</button></div>
+      </div>
+  </div>
+</div>
