--- a/src/app/activity/read-activity/read-activity.component.html
+++ b/src/app/activity/read-activity/read-activity.component.html
@@ -17,7 +17,7 @@
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let activity of activities | paginate: { itemsPerPage: 4, currentPage: page }">
         <div class="bg-white rounded shadow-sm"><img [src]="activity.images" alt="" class="img-fluid card-img-top">
           <div class="p-4">
-            <h5> <a href="#" class="text-dark">{{activity.title}}</a></h5>
+            <h5> <a href="#" class="text-dark">{{activity.name}}</a></h5>
             <p class="small text-muted mb-0">{{activity.description}}</p>
             <div class="d-flex align-items-center justify-content-between rounded-pill px-3 py-2 mt-4">
               <button [routerLink]="['/eactivity/read']" class="button-info"><i class="fas fa-eye"></i></button>
