--- a/src/app/school/read-school/read-school.component.html
+++ b/src/app/school/read-school/read-school.component.html
@@ -26,9 +26,9 @@
           <tbody *ngFor="let activity of activities | paginate: { itemsPerPage: 7, currentPage: page }; let i = index">
             <tr>
               <td class="text-center">{{i}}</td>
-              <td>{{activity.title}}</td>
-              <td>{{activity.title}}</td>
-              <td class="text-right">{{activity.title}}</td>
+              <td>{{activity.name}}</td>
+              <td>{{activity.name}}</td>
+              <td class="text-right">{{activity.name}}</td>
               <td class="td-actions text-right">
                 <button type="button" [routerLink]="['/school/read']" rel="tooltip" class="btn btn-info btn-just-icon">
                   <i class="fas fa-eye"></i>
