--- a/src/app/aggrement/create-aggre/create-aggre.component.html
+++ b/src/app/aggrement/create-aggre/create-aggre.component.html
@@ -1,1 +1,103 @@
-<p>create-aggre works!</p>
+<div class="container-fluid px-1 py-5 mx-auto">
+  <div class="row d-flex justify-content-center">
+    <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+      <h3>CONVENIO</h3>
+      <div class="card">
+        <form [formGroup]="formCreate" class="form-card" (ngSubmit)="onSubmit()">
+          <div class="row justify-content-between text-left">
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Nombre
+                <span class="text-danger"> *</span>
+              </label>
+              <input type="text" id="fname" name="fname" formControlName="name">
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Dirección
+                <span class="text-danger"> *</span>
+              </label>
+              <input type="text" id="fname" name="fname" formControlName="location">
+            </div>
+          </div>
+          <div class="row justify-content-between text-left">
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Recursos
+                <span class="text-danger"> *</span>
+              </label>
+              <textarea type="text" id="lname" name="lname" formControlName="resources"></textarea>
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Descripción
+                <span class="text-danger"> *</span>
+              </label>
+              <textarea type="text" id="lname" name="lname" formControlName="description"></textarea>
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Costo
+                <span class="text-danger"> *</span>
+              </label>
+              <input type="number" id="fname" name="fname" formControlName="cost">
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Imagen
+                <span class="text-danger"> *</span>
+              </label>
+              <input type="file" accept="image/*" formControlName="images">
+            </div>
+          </div>
+          <div class="row justify-content-between text-left">
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3"> Área del conocimiento
+                <span class="text-danger"> *</span>
+              </label>
+              <select formControlName="area" (change)="subarea($event)">
+                <option *ngFor="let area of areas" [value]="area.name">{{area.name}}</option>
+              </select>
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Subárea del conocimiento
+                <span class="text-danger"> *</span></label>
+                <select formControlName="subarea">
+                 <option *ngFor="let subarea of choseArea.subareas">{{subarea}}</option>
+               </select>
+             </div>
+            </div>
+          <div class="row justify-content-between text-left">
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Frecuencia
+                <span class="text-danger"> *</span>
+              </label>
+              <select formControlName="frequency">
+                <option *ngFor="let sea of frequency" [value]="sea">{{sea}}</option>
+              </select>
+            </div>
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Temporada
+                <span class="text-danger"> *</span>
+              </label>
+              <select formControlName="season">
+                <option *ngFor="let sea of season" [value]="sea">{{sea}}</option>
+              </select>
+            </div>
+          </div>
+          <div class="row justify-content-end text-left">
+            <div class="form-group col-sm-6 flex-column d-flex">
+              <label class="form-control-label px-3">Horario
+                <span class="text-danger"> *</span>
+              </label>
+              <select formControlName="schedule">
+                <option *ngFor="let sea of schedule" [value]="sea">{{sea}}</option>
+              </select>
+            </div>
+            <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">AGREGAR</button> </div>
+            <div class="form-group col-sm-3"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div>
+valido: {{formCreate.valid | json}}
+</div> -->
+
