--- a/src/app/activity/detail-activity/detail-activity.component.html
+++ b/src/app/activity/detail-activity/detail-activity.component.html
@@ -3,12 +3,11 @@
       <div class="col-md-3 border-right">
           <div class="d-flex flex-column align-items-center text-center p-3 py-5">
             <img width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"></div>
-            <div class="mt-5 text-center"><button (click)="back()" class="btn btn-color profile-button" type="button">Atrás</button></div>
         </div>
       <div class="col-md-5 border-right">
           <div class="p-3 py-4">
               <div class="d-flex justify-content-between align-items-center">
-                  <h4 class="text-right">Convenio</h4>
+                  <h4 class="text-right">Actividad Extracurricular</h4>
               </div>
               <div class="row mt-2">
                   <div class="col-md-5"><label class="labels">Nombre</label><p>nombre</p></div>
@@ -16,15 +15,15 @@
               </div>
               <div class="row mt-3">
                   <div class="col-md-12"><label class="labels">Dirección</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Costo</label><p>12345</p></div>
+                  <div class="col-md-12"><label class="labels">Máximo de estudiantes</label><p>12345</p></div>
                   <div class="col-md-12"><label class="labels">Área del conocimiento</label><p>12345</p></div>
                   <div class="col-md-12"><label class="labels">Subárea</label><p>12345</p></div>
                   <div class="col-md-12"><label class="labels">Recursos</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Frecuencia</label><p>12345</p></div>
-                  <div class="col-md-12"><label class="labels">Temporada</label><p>12345</p></div>
                   <div class="col-md-12"><label class="labels">Horario</label><p>12345</p></div>
               </div>
+              <div class="mt-5 text-center"><button (click)="back()" class="btn btn-color profile-button" type="button">Atrás</button></div>
           </div>
       </div>
   </div>
 </div>
+
