--- a/src/app/activity/read-activity/read-activity.component.html
+++ b/src/app/activity/read-activity/read-activity.component.html
@@ -20,7 +20,7 @@
             <h5> <a href="#" class="text-dark">{{activity.name}}</a></h5>
             <p class="small text-muted mb-0">{{activity.description}}</p>
             <div class="d-flex align-items-center justify-content-between rounded-pill px-3 py-2 mt-4">
-              <button [routerLink]="['/eactivity/read']" class="button-info"><i class="fas fa-eye"></i></button>
+              <button [routerLink]="['/eactivity/detail']" class="button-info"><i class="fas fa-eye"></i></button>
               <button [routerLink]="['/eactivity/update']" class="button-edit"><i class="fas fa-pen"></i></button>
               <button (click)="delete()" class="button-delete"><i class="fas fa-trash"></i></button>
             </div>
