--- a/src/app/activity/update-activity/update-activity.component.html
+++ b/src/app/activity/update-activity/update-activity.component.html
@@ -3,47 +3,73 @@
     <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
       <h3>ACTIVIDAD EXTRACURRICULAR</h3>
       <div class="card">
-        <form class="form-card" onsubmit="event.preventDefault()">
+        <form [formGroup]="formCreate" class="form-card" (ngSubmit)="onSubmit()">
           <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Título
+              <label class="form-control-label px-3">Nombre
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="fname" name="fname"
-                placeholder="Enter your first name" onblur="validate(1)">
-              </div>
+              <input type="text" id="fname" name="fname" formControlName="name">
+            </div>
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Descripción
+              <label class="form-control-label px-3">Máximo de estudiantes
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="lname" name="lname"
-                placeholder="Enter your last name" onblur="validate(2)">
-               </div>
+              <input type="number" id="fmaxim" name="fmaxim" formControlName="maximStudents">
+            </div>
           </div>
           <div class="row justify-content-between text-left">
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <label class="form-control-label px-3">Recursos
+                  <span class="text-danger"> *</span>
+                </label>
+                <textarea type="text" id="fresources" name="fresources" formControlName="resources"></textarea>
+              </div>
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <label class="form-control-label px-3">Descripción
+                  <span class="text-danger"> *</span>
+                </label>
+                <textarea type="text" id="fdescription" name="fdescription" formControlName="description"></textarea>
+              </div>
+            </div>
+            <div class="row justify-content-between text-left">
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <label class="form-control-label px-3">Horario
+                  <span class="text-danger"> *</span>
+                </label>
+                <select formControlName="schedule">
+                  <option *ngFor="let hour of schedule" [value]="hour">{{hour}}</option>
+                </select>
+              </div>
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Horario
+              <label class="form-control-label px-3">Imagen
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="email" name="email"
-                placeholder="" onblur="validate(3)"> </div>
+              <input type="file" accept="image/*" name="image" class="image" formControlName="images">
+            </div>
+          </div>
+          <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">
               <label class="form-control-label px-3"> Área del conocimiento
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="mob" name="mob"
-                placeholder="" onblur="validate(4)">
-              </div>
-          </div>
-          <div class="row justify-content-between text-left">
+              <select formControlName="area" (change)="subarea($event)">
+                <option *ngFor="let area of areas" [value]="area.name">{{area.name}}</option>
+              </select>
+            </div>
             <div class="form-group col-sm-6 flex-column d-flex">
-               <label class="form-control-label px-3">Sub-área
-                 <span class="text-danger"> *</span>
-                </label> <input type="text" id="job" name="job" placeholder=""
-                onblur="validate(5)"> </div>
+              <label class="form-control-label px-3">Subárea del conocimiento
+                <span class="text-danger"> *</span></label>
+                <select formControlName="subarea">
+                 <option *ngFor="let sub of choseArea.subareas" [value]="sub">{{sub}}</option>
+               </select>
+             </div>
+            </div>
+          <div class="row justify-content-between text-left">
           </div>
-          <div class="row justify-content-end">
-            <div class="form-group col-sm-6"> <button type="submit" class="btn-block">ACTUALIZAR</button> </div>
+          <div class="row justify-content-end text-left">
+            <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">AGREGAR</button> </div>
+            <div class="form-group col-sm-3"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
           </div>
         </form>
       </div>
