--- a/src/app/activity/update-activity/update-activity.component.html
+++ b/src/app/activity/update-activity/update-activity.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid px-1 py-5 mx-auto">
   <div class="row d-flex justify-content-center">
     <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-      <h3>ACTIVIDAD EXTRACURRICULAR</h3>
+      <h3>ACTUALIZAR ACTIVIDAD EXTRACURRICULAR</h3>
       <div class="card">
         <form [formGroup]="formCreate" class="form-card" (ngSubmit)="onSubmit()">
           <div class="row justify-content-between text-left">
@@ -68,7 +68,7 @@
           <div class="row justify-content-between text-left">
           </div>
           <div class="row justify-content-end text-left">
-            <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">AGREGAR</button> </div>
+            <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">ACTUALIZAR</button> </div>
             <div class="form-group col-sm-3"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
           </div>
         </form>
