--- a/src/app/aggrement/update-aggre/update-aggre.component.html
+++ b/src/app/aggrement/update-aggre/update-aggre.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid px-1 py-5 mx-auto">
   <div class="row d-flex justify-content-center">
     <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-      <h3>CONVENIO</h3>
+      <h3>ACTUALIZAR CONVENIO</h3>
       <div class="card">
         <form [formGroup]="formUpdate" class="form-card" (ngSubmit)="onSubmit()">
           <div class="row justify-content-between text-left">
