--- a/src/app/student/update-student/update-student.component.css
+++ b/src/app/student/update-student/update-student.component.css
@@ -55,6 +55,10 @@ textarea:focus {
   color:white
 }
 
+.bn-disabled:disabled{
+  background-color: #ccc;
+}
+
 .btn-block:hover {
   color: #fff !important
 }
