--- a/src/app/student/update-student/update-student.component.html
+++ b/src/app/student/update-student/update-student.component.html
@@ -1,54 +1,37 @@
 <div class="container-fluid px-1 py-5 mx-auto">
   <div class="row d-flex justify-content-center">
     <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-      <h3>ESTUDIANTE</h3>
+      <h3>EDITAR ESTUDIANTE</h3>
       <div class="card">
-        <form class="form-card" onsubmit="event.preventDefault()">
+        <form class="form-card" [formGroup]="formUpdate">
           <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Título
+              <label class="form-control-label px-3">Nombre
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="fname" name="fname"
-                placeholder="Enter your first name" onblur="validate(1)">
-              </div>
+              <input type="text" id="fname" name="fname" formControlName="name">
+            </div>
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Descripción
+              <label class="form-control-label px-3">Grado
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="lname" name="lname"
-                placeholder="Enter your last name" onblur="validate(2)">
-               </div>
+              <input type="number" id="lname" name="lname" formControlName="grade">
+            </div>
           </div>
           <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Horario
+              <label class="form-control-label px-3">Curso
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="email" name="email"
-                placeholder="" onblur="validate(3)"> </div>
-            <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3"> Área del conocimiento
-                <span class="text-danger"> *</span>
-              </label>
-              <input type="text" id="mob" name="mob"
-                placeholder="" onblur="validate(4)">
-              </div>
-          </div>
-          <div class="row justify-content-between text-left">
-            <div class="form-group col-sm-6 flex-column d-flex">
-               <label class="form-control-label px-3">Sub-área
-                 <span class="text-danger"> *</span>
-                </label> <input type="text" id="job" name="job" placeholder=""
-                onblur="validate(5)"> </div>
+              <input type="text" id="email" formControlName="course">
+            </div>
           </div>
           <div class="row justify-content-end">
-            <div class="form-group col-sm-6"> <button type="submit" class="btn-block">ACTUALIZAR</button> </div>
+            <div class="form-group col-sm-4"> <button type="submit" [disabled]="formUpdate.invalid"  class="btn-block  bn-disabled">ACTUALIZAR</button> </div>
+            <div class="form-group col-sm-4"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-
-
