--- a/src/app/school/create-school/create-school.component.css
+++ b/src/app/school/create-school/create-school.component.css
@@ -59,6 +59,10 @@ textarea:focus {
   color: #fff !important
 }
 
+.bn-disabled:disabled{
+  background-color: #ccc;
+}
+
 button:focus {
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
