--- a/src/app/school/read-school/read-school.component.html
+++ b/src/app/school/read-school/read-school.component.html
@@ -18,25 +18,23 @@
             <tr>
               <th class="text-center">#</th>
               <th>Nombre</th>
-              <th>Dirección</th>
-              <th class="text-right">Rector</th>
+              <th class="text-center">Dirección</th>
               <th class="text-right">Acciones</th>
             </tr>
           </thead>
-          <tbody *ngFor="let activity of activities | paginate: { itemsPerPage: 7, currentPage: page }; let i = index">
+          <tbody *ngFor="let school of schools | paginate: { itemsPerPage: 7, currentPage: page }; let i = index">
             <tr>
-              <td class="text-center">{{i}}</td>
-              <td>{{activity.name}}</td>
-              <td>{{activity.name}}</td>
-              <td class="text-right">{{activity.name}}</td>
+              <td class="text-center">{{i+1}}</td>
+              <td>{{school.nombre}}</td>
+              <td class="text-center">{{school.ubicacion}}</td>
               <td class="td-actions text-right">
                 <button type="button" [routerLink]="['/school/read']" rel="tooltip" class="btn btn-info btn-just-icon">
                   <i class="fas fa-eye"></i>
                 </button>
-                <button type="button" [routerLink]="['/school/update']" rel="tooltip" class="btn btn-success btn-just-icon">
+                <button type="button" [routerLink]="['/school/update/', school._id.$oid]" rel="tooltip" class="btn btn-success btn-just-icon">
                   <i class="fas fa-pen"></i>
                 </button>
-                <button type="button" (click)="delete()" rel="tooltip" class="btn btn-danger btn-just-icon" >
+                <button type="button" (click)="delete(school._id.$oid)" rel="tooltip" class="btn btn-danger btn-just-icon" >
                   <i class="fas fa-trash"></i>
                 </button>
               </td>
