--- a/src/app/school/update-school/update-school.component.html
+++ b/src/app/school/update-school/update-school.component.html
@@ -3,47 +3,25 @@
     <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
       <h3>INSTITUCIÓN EDUCATIVA</h3>
       <div class="card">
-        <form class="form-card" onsubmit="event.preventDefault()">
+        <form class="form-card" [formGroup]="formUpdate" (submit)="onSubmit()">
           <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Título
+              <label class="form-control-label px-3">Nombre
                 <span class="text-danger"> *</span>
               </label>
               <input type="text" id="fname" name="fname"
-                placeholder="Enter your first name" onblur="validate(1)">
+                formControlName="nombre">
               </div>
             <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Descripción
+              <label class="form-control-label px-3">Ubicación
                 <span class="text-danger"> *</span>
               </label>
-              <input type="text" id="lname" name="lname"
-                placeholder="Enter your last name" onblur="validate(2)">
+              <input type="text" id="lname" name="lname" formControlName="ubicacion">
                </div>
           </div>
-          <div class="row justify-content-between text-left">
-            <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3">Horario
-                <span class="text-danger"> *</span>
-              </label>
-              <input type="text" id="email" name="email"
-                placeholder="" onblur="validate(3)"> </div>
-            <div class="form-group col-sm-6 flex-column d-flex">
-              <label class="form-control-label px-3"> Área del conocimiento
-                <span class="text-danger"> *</span>
-              </label>
-              <input type="text" id="mob" name="mob"
-                placeholder="" onblur="validate(4)">
-              </div>
-          </div>
-          <div class="row justify-content-between text-left">
-            <div class="form-group col-sm-6 flex-column d-flex">
-               <label class="form-control-label px-3">Sub-área
-                 <span class="text-danger"> *</span>
-                </label> <input type="text" id="job" name="job" placeholder=""
-                onblur="validate(5)"> </div>
-          </div>
           <div class="row justify-content-end">
-            <div class="form-group col-sm-6"> <button type="submit" class="btn-block">ACTUALIZAR</button> </div>
+            <div class="form-group col-sm-6"> <button type="submit" class="btn-block bn-disabled" [disabled]="formUpdate.invalid">ACTUALIZAR</button> </div>
+            <div class="form-group col-sm-6"> <button type="button" class="btn-block" style="background-color: red;" (click)="back()">SALIR</button> </div>
           </div>
         </form>
       </div>
