--- a/src/app/test/do-test/do-test.component.html
+++ b/src/app/test/do-test/do-test.component.html
@@ -1,1 +1,19 @@
-<p>do-test works!</p>
+<div class="content">
+  <div class="container mt-5">
+    <div class="card">
+        <div class="d-flex justify-content-between p-3">
+         <h2>Test</h2>
+        </div>
+        <div class="d-flex justify-content-between py-3">
+          <div class="question-remain">
+          <span>Question 1 of 9</span>
+          </div>
+          <div class="timer">
+            60 sec
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+
+
