--- a/src/app/activity/create-activity/create-activity.component.html
+++ b/src/app/activity/create-activity/create-activity.component.html
@@ -9,13 +9,13 @@
                 <label class="form-control-label px-3">Nombre
                   <span class="text-danger"> *</span>
                 </label>
-                <input type="text" id="fname" name="fname" formControlName="name">
+                <input type="text" id="fname" name="fname" formControlName="nombre">
               </div>
               <div class="form-group col-sm-6 flex-column d-flex">
                 <label class="form-control-label px-3">Máximo de estudiantes
                   <span class="text-danger"> *</span>
                 </label>
-                <input type="number" id="fmaxim" name="fmaxim" formControlName="maximStudents">
+                <input type="number" id="fmaxim" name="fmaxim" formControlName="cupo">
               </div>
             </div>
             <div class="row justify-content-between text-left">
@@ -23,13 +23,13 @@
                   <label class="form-control-label px-3">Recursos
                     <span class="text-danger"> *</span>
                   </label>
-                  <textarea type="text" id="fresources" name="fresources" formControlName="resources"></textarea>
+                  <textarea type="text" id="fresources" name="fresources" formControlName="recursos"></textarea>
                 </div>
                 <div class="form-group col-sm-6 flex-column d-flex">
                   <label class="form-control-label px-3">Descripción
                     <span class="text-danger"> *</span>
                   </label>
-                  <textarea type="text" id="fdescription" name="fdescription" formControlName="description"></textarea>
+                  <textarea type="text" id="fdescription" name="fdescription" formControlName="descripcion"></textarea>
                 </div>
               </div>
               <div class="row justify-content-between text-left">
@@ -37,7 +37,7 @@
                   <label class="form-control-label px-3">Horario
                     <span class="text-danger"> *</span>
                   </label>
-                  <select formControlName="schedule">
+                  <select formControlName="horario">
                     <option *ngFor="let hour of schedule" [value]="hour">{{hour}}</option>
                   </select>
                 </div>
@@ -45,7 +45,7 @@
                 <label class="form-control-label px-3">Imagen
                   <span class="text-danger"> *</span>
                 </label>
-                <input type="file" accept="image/*" name="image" class="image" formControlName="images">
+                <!-- <input type="file" accept="image/*" name="image" class="image" formControlName="images"> -->
               </div>
             </div>
             <div class="row justify-content-between text-left">
@@ -69,7 +69,7 @@
             </div>
             <div class="row justify-content-end text-left">
               <div class="form-group col-sm-3"> <button type="submit" [disabled]="formCreate.invalid"  class="btn-block">AGREGAR</button> </div>
-              <div class="form-group col-sm-3"> <button type="submit" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
+              <div class="form-group col-sm-3"> <button type="button" (click)="back()"  class="btn-block" style="background-color: red;">CANCELAR</button> </div>
             </div>
           </form>
         </div>
